# PyPack

./: LICENSE  README.md  pyproject.toml  requirements.txt
src/PyPack/: _internal.py  files.py  ui.py
